--- a/ML/MultiLevelGraphPartitioning/.classpath
+++ b/ML/MultiLevelGraphPartitioning/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/home/omar/git/GraphPartitioning/EJML-core-0.30.jar"/>
-	<classpathentry kind="lib" path="/home/omar/git/GraphPartitioning/EJML-dense64-0.30.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/omar/git/GraphPartitioning/EJML-core-0.30.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/omar/git/GraphPartitioning/EJML-dense64-0.30.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
